--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@ layout: main
 # Index page
 scripts:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js
+  - https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.44.0/min/vs/loader.min.js"
+  - assets/js/monaco-init.js
 ---
 
